Added a verification point to addMembership method

--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,16 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="658a60">  <td>21/08/08 10:46:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationMemberships.VerifyAddMemberships()[pri:0, instance:com.maven.testng.VerifyQualificationMemberships@436bc36]">VerifyAddMemberships</td> 
-  <td>main@24650043</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/08 10:46:30</td>   <td>1103</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@49d3c823]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@24650043</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/08 10:46:14</td>   <td>-14128</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@49d3c823]">&gt;&gt;getURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@24650043</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/08/08 10:46:26</td>   <td>-2987</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyQualificationMemberships.navigate()[pri:0, instance:com.maven.testng.VerifyQualificationMemberships@436bc36]">&gt;&gt;navigate</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@24650043</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/08 10:46:19</td>   <td>-9683</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@49d3c823]">verifyLoginErrorMessage</td> 
-  <td>main@24650043</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/08 10:46:20</td>   <td>-8102</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@49d3c823]">verifyLoginWithCorrectCredentials</td> 
-  <td>main@24650043</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/08/09 19:55:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationLanguages.VerifyAddLanguage()[pri:0, instance:com.maven.testng.VerifyQualificationLanguages@604c5de8]">VerifyAddLanguage</td> 
+  <td>main@781091365</td>   <td></td> </tr>
+<tr bgcolor="826d77">  <td>21/08/09 19:56:01</td>   <td>3717</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationMemberships.VerifyAddMemberships()[pri:0, instance:com.maven.testng.VerifyQualificationMemberships@37091312]">VerifyAddMemberships</td> 
+  <td>main@781091365</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/09 19:56:02</td>   <td>4920</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@5fe1ce85]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@781091365</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/09 19:55:42</td>   <td>-15527</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@5fe1ce85]">&gt;&gt;getURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@781091365</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/08/09 19:55:53</td>   <td>-3683</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyQualificationLanguages.navigate()[pri:0, instance:com.maven.testng.VerifyQualificationLanguages@604c5de8]">&gt;&gt;navigate</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@781091365</td>   <td></td> </tr>
+<tr bgcolor="826d77">  <td>21/08/09 19:55:58</td>   <td>1208</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyQualificationMemberships.navigate()[pri:0, instance:com.maven.testng.VerifyQualificationMemberships@37091312]">&gt;&gt;navigate</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@781091365</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/09 19:55:46</td>   <td>-11011</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@5fe1ce85]">verifyLoginErrorMessage</td> 
+  <td>main@781091365</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/09 19:55:48</td>   <td>-9175</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@5fe1ce85]">verifyLoginWithCorrectCredentials</td> 
+  <td>main@781091365</td>   <td></td> </tr>
 </table>
