--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,12 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">17,336</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">22,546</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.maven.testng.VerifyLoginTest</td><td><a href="#m0">verifyLoginErrorMessage</a></td><td rowspan="1">1628399779337</td><td rowspan="1">1578</td></tr><tr class="passedeven"><td><a href="#m1">verifyLoginWithCorrectCredentials</a></td><td rowspan="1">1628399780918</td><td rowspan="1">5113</td></tr><tr class="passedodd"><td rowspan="1">com.maven.testng.VerifyQualificationMemberships</td><td><a href="#m2">VerifyAddMemberships</a></td><td rowspan="1">1628399789020</td><td rowspan="1">1102</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.maven.testng.VerifyLoginTest</td><td><a href="#m0">verifyLoginErrorMessage</a></td><td rowspan="1">1628519146621</td><td rowspan="1">1833</td></tr><tr class="passedeven"><td><a href="#m1">verifyLoginWithCorrectCredentials</a></td><td rowspan="1">1628519148457</td><td rowspan="1">5490</td></tr><tr class="passedodd"><td rowspan="1">com.maven.testng.VerifyQualificationLanguages</td><td><a href="#m2">VerifyAddLanguage</a></td><td rowspan="1">1628519157632</td><td rowspan="1">1206</td></tr><tr class="passedeven"><td rowspan="1">com.maven.testng.VerifyQualificationMemberships</td><td><a href="#m3">VerifyAddMemberships</a></td><td rowspan="1">1628519161349</td><td rowspan="1">1203</td></tr></tbody>
 </table>
 <h2>Test</h2><h3 id="m0">com.maven.testng.VerifyLoginTest#verifyLoginErrorMessage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">com.maven.testng.VerifyLoginTest#verifyLoginWithCorrectCredentials</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.maven.testng.VerifyQualificationMemberships#VerifyAddMemberships</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.maven.testng.VerifyQualificationLanguages#VerifyAddLanguage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.maven.testng.VerifyQualificationMemberships#VerifyAddMemberships</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
