--- a/test-output/index.html
+++ b/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,6 +102,11 @@
                       <a href="#" panel-name="suite-Suite" class="show-methods passed suite-Suite"> (show)</a> <!-- show-methods passed suite-Suite -->
                     </span>
                     <div class="method-list-content passed suite-Suite">
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyQualificationLanguages" class="method navigator-link" hash-for-method="VerifyAddLanguage">VerifyAddLanguage</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyQualificationMemberships" class="method navigator-link" hash-for-method="VerifyAddMemberships">VerifyAddMemberships</a> <!-- method navigator-link -->
@@ -147,6 +152,21 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
+              <span class="class-name">com.maven.testng.VerifyQualificationLanguages</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="VerifyAddLanguage">
+                  </a> <!-- VerifyAddLanguage -->
+                  <span class="method-name">VerifyAddLanguage</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-passed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
               <span class="class-name">com.maven.testng.VerifyLoginTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -179,6 +199,7 @@
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.maven.testng.VerifyLoginTest&quot;/&gt;
+      &lt;class name=&quot;com.maven.testng.VerifyQualificationLanguages&quot;/&gt;
       &lt;class name=&quot;com.maven.testng.VerifyQualificationMemberships&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
@@ -193,7 +214,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (2 classes)</span>
+                <span class="test-name">Test (3 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -219,24 +240,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyLoginWithCorrectCredentials')
 data.setCell(0, 2, 'com.maven.testng.VerifyLoginTest')
-data.setCell(0, 3, 5113);
+data.setCell(0, 3, 5490);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'verifyLoginErrorMessage')
 data.setCell(1, 2, 'com.maven.testng.VerifyLoginTest')
-data.setCell(1, 3, 1578);
+data.setCell(1, 3, 1833);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'VerifyAddMemberships')
-data.setCell(2, 2, 'com.maven.testng.VerifyQualificationMemberships')
-data.setCell(2, 3, 1102);
+data.setCell(2, 1, 'VerifyAddLanguage')
+data.setCell(2, 2, 'com.maven.testng.VerifyQualificationLanguages')
+data.setCell(2, 3, 1206);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'VerifyAddMemberships')
+data.setCell(3, 2, 'com.maven.testng.VerifyQualificationMemberships')
+data.setCell(3, 3, 1203);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -269,29 +294,40 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">verifyLoginErrorMessage</span>
-                <span class="method-start">4449 ms</span>
+                <span class="method-start">4524 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyLoginWithCorrectCredentials</span>
-                <span class="method-start">6030 ms</span>
+                <span class="method-start">6360 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.maven.testng.VerifyQualificationLanguages</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">navigate</span>
+                <span class="method-start">11852 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">VerifyAddLanguage</span>
+                <span class="method-start">15535 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.maven.testng.VerifyQualificationMemberships</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">navigate</span>
-                <span class="method-start">11145 ms</span>
+                <span class="method-start">16742 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">VerifyAddMemberships</span>
-                <span class="method-start">14132 ms</span>
+                <span class="method-start">19252 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.maven.testng.VerifyLoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">15235 ms</span>
+                <span class="method-start">20455 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
