Fixed issue in Work Shifts verification point

--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,20 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b46fba">  <td>21/08/09 19:55:42</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@5fe1ce85]">&gt;&gt;getURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@781091365</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/09 19:55:46</td>   <td>4516</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@5fe1ce85]">verifyLoginErrorMessage</td> 
-  <td>main@781091365</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/09 19:55:48</td>   <td>6352</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@5fe1ce85]">verifyLoginWithCorrectCredentials</td> 
-  <td>main@781091365</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/08/09 19:55:53</td>   <td>11844</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyQualificationLanguages.navigate()[pri:0, instance:com.maven.testng.VerifyQualificationLanguages@604c5de8]">&gt;&gt;navigate</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@781091365</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/08/09 19:55:57</td>   <td>15527</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationLanguages.VerifyAddLanguage()[pri:0, instance:com.maven.testng.VerifyQualificationLanguages@604c5de8]">VerifyAddLanguage</td> 
-  <td>main@781091365</td>   <td></td> </tr>
-<tr bgcolor="826d77">  <td>21/08/09 19:55:58</td>   <td>16735</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyQualificationMemberships.navigate()[pri:0, instance:com.maven.testng.VerifyQualificationMemberships@37091312]">&gt;&gt;navigate</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@781091365</td>   <td></td> </tr>
-<tr bgcolor="826d77">  <td>21/08/09 19:56:01</td>   <td>19244</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationMemberships.VerifyAddMemberships()[pri:0, instance:com.maven.testng.VerifyQualificationMemberships@37091312]">VerifyAddMemberships</td> 
-  <td>main@781091365</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/09 19:56:02</td>   <td>20447</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@5fe1ce85]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@781091365</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/10 20:22:06</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@436bc36]">&gt;&gt;getURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1896074070</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/10 20:22:11</td>   <td>4285</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@436bc36]">verifyLoginErrorMessage</td> 
+  <td>main@1896074070</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/10 20:22:12</td>   <td>5985</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@436bc36]">verifyLoginWithCorrectCredentials</td> 
+  <td>main@1896074070</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/08/10 20:22:17</td>   <td>10947</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyWorkShifts.navigateToWorkShifts()[pri:0, instance:com.maven.testng.VerifyWorkShifts@5fe1ce85]">&gt;&gt;navigateToWorkShifts</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1896074070</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/08/10 20:22:20</td>   <td>14034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.verifyAddWorkShifts(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@5fe1ce85]">verifyAddWorkShifts</td> 
+  <td>main@1896074070</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/08/10 20:22:22</td>   <td>15633</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.verifyAddWorkShifts(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@5fe1ce85]">verifyAddWorkShifts</td> 
+  <td>main@1896074070</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/08/10 20:22:23</td>   <td>17171</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.verifyAddWorkShifts(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@5fe1ce85]">verifyAddWorkShifts</td> 
+  <td>main@1896074070</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/08/10 20:22:25</td>   <td>18640</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.verifyAddWorkShifts(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@5fe1ce85]">verifyAddWorkShifts</td> 
+  <td>main@1896074070</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/08/10 20:22:26</td>   <td>20194</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.verifyAddWorkShifts(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@5fe1ce85]">verifyAddWorkShifts</td> 
+  <td>main@1896074070</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/10 20:22:30</td>   <td>23851</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@436bc36]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1896074070</td>   <td></td> </tr>
 </table>
