--- a/test-output/index.html
+++ b/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">7 methods,   7 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,12 +104,27 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyQualificationLanguages" class="method navigator-link" hash-for-method="VerifyAddLanguage">VerifyAddLanguage</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyWorkShifts" class="method navigator-link" hash-for-method="verifyAddWorkShifts(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson)">verifyAddWorkShifts(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyQualificationMemberships" class="method navigator-link" hash-for-method="VerifyAddMemberships">VerifyAddMemberships</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyWorkShifts" class="method navigator-link" hash-for-method="verifyAddWorkShifts(Test_Shift 03, 12:15, 18:45, Dominic Chase)">verifyAddWorkShifts(Test_Shift 03, 12:15, 18:45, Dominic Chase)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyWorkShifts" class="method navigator-link" hash-for-method="verifyAddWorkShifts(Test_Shift 05, 07:45, 19:45, David Morris)">verifyAddWorkShifts(Test_Shift 05, 07:45, 19:45, David Morris)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyWorkShifts" class="method navigator-link" hash-for-method="verifyAddWorkShifts(Test_Shift 04, 10:30, 20:15, Nathan Elliot)">verifyAddWorkShifts(Test_Shift 04, 10:30, 20:15, Nathan Elliot)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyWorkShifts" class="method navigator-link" hash-for-method="verifyAddWorkShifts(Test_Shift 02, 10:00, 16:00, Kallyani Bhute)">verifyAddWorkShifts(Test_Shift 02, 10:00, 16:00, Kallyani Bhute)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -137,29 +152,47 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.maven.testng.VerifyQualificationMemberships</span>
+              <span class="class-name">com.maven.testng.VerifyWorkShifts</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="VerifyAddMemberships">
-                  </a> <!-- VerifyAddMemberships -->
-                  <span class="method-name">VerifyAddMemberships</span>
+                  <a name="verifyAddWorkShifts(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson)">
+                  </a> <!-- verifyAddWorkShifts(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson) -->
+                  <span class="method-name">verifyAddWorkShifts</span>
+                  <span class="parameters">(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-passed -->
-          <div class="suite-Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.maven.testng.VerifyQualificationLanguages</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="VerifyAddLanguage">
-                  </a> <!-- VerifyAddLanguage -->
-                  <span class="method-name">VerifyAddLanguage</span>
+                  <a name="verifyAddWorkShifts(Test_Shift 03, 12:15, 18:45, Dominic Chase)">
+                  </a> <!-- verifyAddWorkShifts(Test_Shift 03, 12:15, 18:45, Dominic Chase) -->
+                  <span class="method-name">verifyAddWorkShifts</span>
+                  <span class="parameters">(Test_Shift 03, 12:15, 18:45, Dominic Chase)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyAddWorkShifts(Test_Shift 05, 07:45, 19:45, David Morris)">
+                  </a> <!-- verifyAddWorkShifts(Test_Shift 05, 07:45, 19:45, David Morris) -->
+                  <span class="method-name">verifyAddWorkShifts</span>
+                  <span class="parameters">(Test_Shift 05, 07:45, 19:45, David Morris)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyAddWorkShifts(Test_Shift 04, 10:30, 20:15, Nathan Elliot)">
+                  </a> <!-- verifyAddWorkShifts(Test_Shift 04, 10:30, 20:15, Nathan Elliot) -->
+                  <span class="method-name">verifyAddWorkShifts</span>
+                  <span class="parameters">(Test_Shift 04, 10:30, 20:15, Nathan Elliot)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyAddWorkShifts(Test_Shift 02, 10:00, 16:00, Kallyani Bhute)">
+                  </a> <!-- verifyAddWorkShifts(Test_Shift 02, 10:00, 16:00, Kallyani Bhute) -->
+                  <span class="method-name">verifyAddWorkShifts</span>
+                  <span class="parameters">(Test_Shift 02, 10:00, 16:00, Kallyani Bhute)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -199,8 +232,7 @@
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.maven.testng.VerifyLoginTest&quot;/&gt;
-      &lt;class name=&quot;com.maven.testng.VerifyQualificationLanguages&quot;/&gt;
-      &lt;class name=&quot;com.maven.testng.VerifyQualificationMemberships&quot;/&gt;
+      &lt;class name=&quot;com.maven.testng.VerifyWorkShifts&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -214,7 +246,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (3 classes)</span>
+                <span class="test-name">Test (2 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -240,28 +272,40 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(7);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyLoginWithCorrectCredentials')
 data.setCell(0, 2, 'com.maven.testng.VerifyLoginTest')
-data.setCell(0, 3, 5490);
+data.setCell(0, 3, 4960);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyLoginErrorMessage')
-data.setCell(1, 2, 'com.maven.testng.VerifyLoginTest')
-data.setCell(1, 3, 1833);
+data.setCell(1, 1, 'verifyAddWorkShifts')
+data.setCell(1, 2, 'com.maven.testng.VerifyWorkShifts')
+data.setCell(1, 3, 3656);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'VerifyAddLanguage')
-data.setCell(2, 2, 'com.maven.testng.VerifyQualificationLanguages')
-data.setCell(2, 3, 1206);
+data.setCell(2, 1, 'verifyLoginErrorMessage')
+data.setCell(2, 2, 'com.maven.testng.VerifyLoginTest')
+data.setCell(2, 3, 1697);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'VerifyAddMemberships')
-data.setCell(3, 2, 'com.maven.testng.VerifyQualificationMemberships')
-data.setCell(3, 3, 1203);
+data.setCell(3, 1, 'verifyAddWorkShifts')
+data.setCell(3, 2, 'com.maven.testng.VerifyWorkShifts')
+data.setCell(3, 3, 1598);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'verifyAddWorkShifts')
+data.setCell(4, 2, 'com.maven.testng.VerifyWorkShifts')
+data.setCell(4, 3, 1553);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'verifyAddWorkShifts')
+data.setCell(5, 2, 'com.maven.testng.VerifyWorkShifts')
+data.setCell(5, 3, 1537);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'verifyAddWorkShifts')
+data.setCell(6, 2, 'com.maven.testng.VerifyWorkShifts')
+data.setCell(6, 3, 1468);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 seconds</span>
+              <span class="suite-total-time">Total running time: 16 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -294,40 +338,45 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">verifyLoginErrorMessage</span>
-                <span class="method-start">4524 ms</span>
+                <span class="method-start">4291 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyLoginWithCorrectCredentials</span>
-                <span class="method-start">6360 ms</span>
+                <span class="method-start">5991 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
-              <div class="chronological-class-name">com.maven.testng.VerifyQualificationLanguages</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.maven.testng.VerifyWorkShifts</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">navigate</span>
-                <span class="method-start">11852 ms</span>
+                <span class="method-name">navigateToWorkShifts</span>
+                <span class="method-start">10953 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">VerifyAddLanguage</span>
-                <span class="method-start">15535 ms</span>
+                <span class="method-name">verifyAddWorkShifts(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson)</span>
+                <span class="method-start">14040 ms</span>
               </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.maven.testng.VerifyQualificationMemberships</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">navigate</span>
-                <span class="method-start">16742 ms</span>
-              </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">VerifyAddMemberships</span>
-                <span class="method-start">19252 ms</span>
+                <span class="method-name">verifyAddWorkShifts(Test_Shift 02, 10:00, 16:00, Kallyani Bhute)</span>
+                <span class="method-start">15639 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">verifyAddWorkShifts(Test_Shift 03, 12:15, 18:45, Dominic Chase)</span>
+                <span class="method-start">17177 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">verifyAddWorkShifts(Test_Shift 04, 10:30, 20:15, Nathan Elliot)</span>
+                <span class="method-start">18646 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">verifyAddWorkShifts(Test_Shift 05, 07:45, 19:45, David Morris)</span>
+                <span class="method-start">20200 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.maven.testng.VerifyLoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">20455 ms</span>
+                <span class="method-start">23857 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
