Completed function searchWithUsernameAndAllUserTypes

--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,20 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b46fba">  <td>21/08/22 16:14:15</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@436bc36]">&gt;&gt;getURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1896074070</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/22 16:14:20</td>   <td>5303</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@436bc36]">verifyLoginErrorMessage</td> 
-  <td>main@1896074070</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/22 16:14:22</td>   <td>6711</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@436bc36]">verifyLoginWithCorrectCredentials</td> 
-  <td>main@1896074070</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/08/22 16:14:27</td>   <td>12312</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyUserManagementPage.navigate()[pri:0, instance:com.maven.testng.VerifyUserManagementPage@5fe1ce85]">&gt;&gt;navigate</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1896074070</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/08/22 16:14:30</td>   <td>14941</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyUserManagementPage.addUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.maven.testng.VerifyUserManagementPage@5fe1ce85]">addUser</td> 
-  <td>main@1896074070</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/08/22 16:14:38</td>   <td>23065</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyUserManagementPage.addUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.maven.testng.VerifyUserManagementPage@5fe1ce85]">addUser</td> 
-  <td>main@1896074070</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/08/22 16:14:46</td>   <td>31079</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyUserManagementPage.addUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.maven.testng.VerifyUserManagementPage@5fe1ce85]">addUser</td> 
-  <td>main@1896074070</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/22 16:14:54</td>   <td>38488</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@436bc36]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1896074070</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/29 12:13:46</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@1cdc4c27]">&gt;&gt;getURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@38603201</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/29 12:13:52</td>   <td>5476</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@1cdc4c27]">verifyLoginErrorMessage</td> 
+  <td>main@38603201</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/29 12:13:53</td>   <td>6861</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@1cdc4c27]">verifyLoginWithCorrectCredentials</td> 
+  <td>main@38603201</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/08/29 12:13:59</td>   <td>12281</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserManagementUserSearchTest.verifyUserManagementSearch()[pri:0, instance:com.maven.testng.tests.UserManagementUserSearchTest@77b14724]">verifyUserManagementSearch</td> 
+  <td>main@38603201</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/29 12:14:01</td>   <td>15010</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@1cdc4c27]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@38603201</td>   <td></td> </tr>
 </table>
