--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -30,22 +30,18 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
-<td>com.maven.testng.VerifyUserManagementPage</td>
+<td>com.maven.testng.tests.UserManagementUserSearchTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>addUser</td>
+<td>verifyUserManagementSearch</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>navigate</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
