--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,7 +11,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyUserManagementSearch</td>
+<td>verifyuserCanSearchESSUsersByUsername</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyuserCanSearchAllUsersByUsername</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
