Created functions to search by status in functions page

--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -41,6 +41,10 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>verifyuserCanSearchsearchAllUsersByEmployeeName</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>verifyuserCanSearchAllUsersByUsername</td>
 <td>&nbsp;</td></tr>
 <tr>
