Added a clear() method in page class

--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -41,11 +41,15 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyuserCanSearchsearchAllUsersByEmployeeName</td>
+<td>verifyuserCanSearchUsersByStatus</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>verifyuserCanSearchAllUsersByUsername</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyuserCanSearchAllUsersByEmployeeName</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
