Fixed the issues with static webdriver

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,11 +11,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>aaa</td>
+<td>verifyLoginAsInvaliduser</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>sss</td>
+<td>verifyLoginAsValidUser</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
