--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse-1095530231\testng-customsuite.xml</span>
+                    <span>C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse-1344955834\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,12 +104,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.tests.LoginTest" class="method navigator-link" hash-for-method="aaa">aaa</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.tests.LoginTest" class="method navigator-link" hash-for-method="verifyLoginAsInvaliduser">verifyLoginAsInvaliduser</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.tests.LoginTest" class="method navigator-link" hash-for-method="sss">sss</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.tests.LoginTest" class="method navigator-link" hash-for-method="verifyLoginAsValidUser">verifyLoginAsValidUser</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -132,16 +132,16 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="aaa">
-                  </a> <!-- aaa -->
-                  <span class="method-name">aaa</span>
+                  <a name="verifyLoginAsInvaliduser">
+                  </a> <!-- verifyLoginAsInvaliduser -->
+                  <span class="method-name">verifyLoginAsInvaliduser</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="sss">
-                  </a> <!-- sss -->
-                  <span class="method-name">sss</span>
+                  <a name="verifyLoginAsValidUser">
+                  </a> <!-- verifyLoginAsValidUser -->
+                  <span class="method-name">verifyLoginAsValidUser</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -149,7 +149,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse-1095530231\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse-1344955834\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -200,18 +200,18 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'aaa')
+data.setCell(0, 1, 'verifyLoginAsValidUser')
 data.setCell(0, 2, 'com.maven.testng.tests.LoginTest')
-data.setCell(0, 3, 4749);
+data.setCell(0, 3, 4310);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'sss')
+data.setCell(1, 1, 'verifyLoginAsInvaliduser')
 data.setCell(1, 2, 'com.maven.testng.tests.LoginTest')
-data.setCell(1, 3, 3801);
+data.setCell(1, 3, 1076);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 8 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -243,24 +243,24 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">aaa</span>
-                <span class="method-start">1537 ms</span>
+                <span class="method-name">verifyLoginAsInvaliduser</span>
+                <span class="method-start">5214 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">6290 ms</span>
+                <span class="method-start">6294 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">6871 ms</span>
+                <span class="method-start">6905 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">sss</span>
-                <span class="method-start">8010 ms</span>
+                <span class="method-name">verifyLoginAsValidUser</span>
+                <span class="method-start">12197 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">11812 ms</span>
+                <span class="method-start">16510 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
