Fixed "exceptionininitializererror" in Search User function

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse--1969215647\testng-customsuite.xml</span>
+                    <span>C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse-979362533\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.tests.UserManagementSearchUserTest" class="method navigator-link" hash-for-method="verifyuserCanSearchAllUsersByUsername">verifyuserCanSearchAllUsersByUsername</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.tests.UserManagementSearchUserTest" class="method navigator-link" hash-for-method="verifyuserCanSearchAnyUsersByUsername">verifyuserCanSearchAnyUsersByUsername</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -127,9 +127,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyuserCanSearchAllUsersByUsername">
-                  </a> <!-- verifyuserCanSearchAllUsersByUsername -->
-                  <span class="method-name">verifyuserCanSearchAllUsersByUsername</span>
+                  <a name="verifyuserCanSearchAnyUsersByUsername">
+                  </a> <!-- verifyuserCanSearchAnyUsersByUsername -->
+                  <span class="method-name">verifyuserCanSearchAnyUsersByUsername</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse--1969215647\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse-979362533\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -188,14 +188,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyuserCanSearchAllUsersByUsername')
+data.setCell(0, 1, 'verifyuserCanSearchAnyUsersByUsername')
 data.setCell(0, 2, 'com.maven.testng.tests.UserManagementSearchUserTest')
-data.setCell(0, 3, 16247);
+data.setCell(0, 3, 15235);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 16 seconds</span>
+              <span class="suite-total-time">Total running time: 15 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -206,6 +206,12 @@ return data;
             <span class="header-content">Reporter output for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">verifyuserCanSearchAnyUsersByUsername</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">No records found</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
@@ -223,7 +229,7 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.maven.testng.tests.UserManagementSearchUserTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">verifyuserCanSearchAllUsersByUsername</span>
+                <span class="method-name">verifyuserCanSearchAnyUsersByUsername</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
